--- a/index.html
+++ b/index.html
@@ -71,28 +71,36 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
-          <ul class="advantages-icons-list">
-            <li class="advantages-icons-item">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
+          <ul class="advantages-icon-list">
+            <li class="advantages-icon-item">
+              <div class="advantages-icon-wrapper">
+              	<svg class="" width="64" height="64">
+	                <use href="./images/icons.svg#icon-antenna"></use>
+	              </svg>
+              </div>
             </li>
 
-            <li class="advantages-icons-item">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+            <li class="advantages-icon-item">
+              <div class="advantages-icon-wrapper">
+              	<svg class="icon" width="64" height="64">
+	                <use href="./images/icons.svg#icon-clock"></use>
+	              </svg>
+              </div>
             </li>
 
-            <li class="advantages-icons-item">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+            <li class="advantages-icon-item">
+              <div class="advantages-icon-wrapper">
+              	<svg width="64" height="64">
+	                <use href="./images/icons.svg#icon-diagram"></use>
+	              </svg>
+              </div>
             </li>
-            <li class="advantages-icons-item">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+            <li class="advantages-icon-item">
+              <div class="advantages-icon-wrapper">
+              	<svg width="64" height="64">
+	                <use href="./images/icons.svg#icon-astronaut"></use>
+	              </svg>
+              </div>
             </li>
           </ul>
           <ul class="advantages-list">
@@ -451,10 +459,10 @@
           <a class="logo" href="./index.html"
             >Web<span class="footer-logo-part">Studio</span></a
           >
-          <div class="footer-text">
+          <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
-          </div>
+          </p>
         </div>
         <div class="footer-soc-container">
           <p class="footer-soc-text">Social media</p>
