--- a/index.html
+++ b/index.html
@@ -74,32 +74,32 @@
           <ul class="advantages-icon-list">
             <li class="advantages-icon-item">
               <div class="advantages-icon-wrapper">
-              	<svg class="" width="64" height="64">
-	                <use href="./images/icons.svg#icon-antenna"></use>
-	              </svg>
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
               </div>
             </li>
 
             <li class="advantages-icon-item">
               <div class="advantages-icon-wrapper">
-              	<svg class="icon" width="64" height="64">
-	                <use href="./images/icons.svg#icon-clock"></use>
-	              </svg>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
               </div>
             </li>
 
             <li class="advantages-icon-item">
               <div class="advantages-icon-wrapper">
-              	<svg width="64" height="64">
-	                <use href="./images/icons.svg#icon-diagram"></use>
-	              </svg>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
               </div>
             </li>
             <li class="advantages-icon-item">
               <div class="advantages-icon-wrapper">
-              	<svg width="64" height="64">
-	                <use href="./images/icons.svg#icon-astronaut"></use>
-	              </svg>
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
               </div>
             </li>
           </ul>
@@ -335,13 +335,11 @@
                   src="./images/banking_app.jpg"
                   alt="Banking App"
                 />
-                <div class="portfolio-cover">
-                  <p class="portfolio-cover-text">
+                  <p class="portfolio-cover">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p>
-                </div>
+                  </p>  
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Banking App</h3>
@@ -355,13 +353,11 @@
                   src="./images/cashless_payment.jpg"
                   alt="Cashless Payment"
                 />
-                <div class="portfolio-cover">
-                  <p class="portfolio-cover-text">
+                  <p class="portfolio-cover">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
-                </div>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Cashless Payment</h3>
@@ -375,13 +371,11 @@
                   src="./images/meditation_app.jpg"
                   alt="Meditation App"
                 />
-                <div class="portfolio-cover">
-                  <p class="portfolio-cover-text">
+                  <p class="portfolio-cover">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
-                </div>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Meditation App</h3>
@@ -395,13 +389,10 @@
                   src="./images/taxi_service.jpg"
                   alt="Taxi Service"
                 />
-                <div class="portfolio-cover">
-                  <p class="portfolio-cover-text">
+                  <p class="portfolio-cover">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </p>
-                </div>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Taxi Service</h3>
@@ -415,13 +406,11 @@
                   src="./images/screen_illustrations.jpg"
                   alt="Screen Illustrations"
                 />
-                <div class="portfolio-cover">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Screen Illustrations</h3>
@@ -435,13 +424,11 @@
                   src="./images/online_courses.jpg"
                   alt="Online Courses"
                 />
-                <div class="portfolio-cover">
-                  <p class="portfolio-cover-text">
+                  <p class="portfolio-cover">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
-                </div>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Online Courses</h3>
